# enhanced-de-project-engineering

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.cursor/rules/: instructions.mdc  python.mdc  sql.mdc  tdd.mdc
docker/: docker-compose.yml
docs/: repo-logo-prompt.md
enhanced-de-prompt-engineering/tasks/: task-01.md  task-02.md
enhanced_de_prompt_engineering/analyses/: analysis-task-01.md  analysis_task_01.md  analysis_task_02.md
enhanced_de_prompt_engineering/chatgpt_prompts/: plan-task-01.md  plan_task_01.md  prompt_task_01.md  prompt_task_02.md
enhanced_de_prompt_engineering/cursor_chats/: cursor_chat_task_01.md  cursor_chat_task_02.md
enhanced_de_prompt_engineering/prompt_plans/: plan_task_02.md
enhanced_de_prompt_engineering/queries/: revenue_report.sql  revenue_report_original.sql
enhanced_de_prompt_engineering/queries/task_01/: revenue_report_cte.sql
enhanced_de_prompt_engineering/queries/task_02/: average_order_value_last_3_months.sql  top_customer_by_spend.sql  total_sales_march_2024.sql
enhanced_de_prompt_engineering/tasks/: task-01.md  task-02.md  task_01.md
enhanced_de_prompt_engineering/utils/: benchmark.py
tests/: conftest.py  test_benchmark_utils.py  test_revenue_report.py  test_revenue_report_postgres.py  test_sales_analysis_sqlite.py
